updating attendees api
