# restapi/operations/attendees/get_attendee_by_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package attendees
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/sctskw/attend.io/models"
+)
+
+// GetAttendeeByOKCode is the HTTP code returned for type GetAttendeeByOK
+const GetAttendeeByOKCode int = 200
+
+/*GetAttendeeByOK find an attendee by id
+
+swagger:response getAttendeeByOK
+*/
+type GetAttendeeByOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Attendee `json:"body,omitempty"`
+}
+
+// NewGetAttendeeByOK creates GetAttendeeByOK with default headers values
+func NewGetAttendeeByOK() *GetAttendeeByOK {
+
+	return &GetAttendeeByOK{}
+}
+
+// WithPayload adds the payload to the get attendee by o k response
+func (o *GetAttendeeByOK) WithPayload(payload *models.Attendee) *GetAttendeeByOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get attendee by o k response
+func (o *GetAttendeeByOK) SetPayload(payload *models.Attendee) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAttendeeByOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*GetAttendeeByDefault generic error response
+
+swagger:response getAttendeeByDefault
+*/
+type GetAttendeeByDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetAttendeeByDefault creates GetAttendeeByDefault with default headers values
+func NewGetAttendeeByDefault(code int) *GetAttendeeByDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetAttendeeByDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get attendee by default response
+func (o *GetAttendeeByDefault) WithStatusCode(code int) *GetAttendeeByDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get attendee by default response
+func (o *GetAttendeeByDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get attendee by default response
+func (o *GetAttendeeByDefault) WithPayload(payload *models.Error) *GetAttendeeByDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get attendee by default response
+func (o *GetAttendeeByDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAttendeeByDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
