# restapi/operations/attendees/get_attendees_by_event_id_responses.go
@@ -1,0 +1,119 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package attendees
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/sctskw/attend.io/models"
+)
+
+// GetAttendeesByEventIDOKCode is the HTTP code returned for type GetAttendeesByEventIDOK
+const GetAttendeesByEventIDOKCode int = 200
+
+/*GetAttendeesByEventIDOK list the attendees per event
+
+swagger:response getAttendeesByEventIdOK
+*/
+type GetAttendeesByEventIDOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.AttendeesList `json:"body,omitempty"`
+}
+
+// NewGetAttendeesByEventIDOK creates GetAttendeesByEventIDOK with default headers values
+func NewGetAttendeesByEventIDOK() *GetAttendeesByEventIDOK {
+
+	return &GetAttendeesByEventIDOK{}
+}
+
+// WithPayload adds the payload to the get attendees by event Id o k response
+func (o *GetAttendeesByEventIDOK) WithPayload(payload models.AttendeesList) *GetAttendeesByEventIDOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get attendees by event Id o k response
+func (o *GetAttendeesByEventIDOK) SetPayload(payload models.AttendeesList) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAttendeesByEventIDOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = models.AttendeesList{}
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+/*GetAttendeesByEventIDDefault generic error response
+
+swagger:response getAttendeesByEventIdDefault
+*/
+type GetAttendeesByEventIDDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetAttendeesByEventIDDefault creates GetAttendeesByEventIDDefault with default headers values
+func NewGetAttendeesByEventIDDefault(code int) *GetAttendeesByEventIDDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetAttendeesByEventIDDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get attendees by event Id default response
+func (o *GetAttendeesByEventIDDefault) WithStatusCode(code int) *GetAttendeesByEventIDDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get attendees by event Id default response
+func (o *GetAttendeesByEventIDDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get attendees by event Id default response
+func (o *GetAttendeesByEventIDDefault) WithPayload(payload *models.Error) *GetAttendeesByEventIDDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get attendees by event Id default response
+func (o *GetAttendeesByEventIDDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAttendeesByEventIDDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
