# restapi/operations/attendees/get_attendees_by_id_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package attendees
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/sctskw/attend.io/models"
+)
+
+// GetAttendeesByIDOKCode is the HTTP code returned for type GetAttendeesByIDOK
+const GetAttendeesByIDOKCode int = 200
+
+/*GetAttendeesByIDOK find an attendee by id
+
+swagger:response getAttendeesByIdOK
+*/
+type GetAttendeesByIDOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Attendee `json:"body,omitempty"`
+}
+
+// NewGetAttendeesByIDOK creates GetAttendeesByIDOK with default headers values
+func NewGetAttendeesByIDOK() *GetAttendeesByIDOK {
+
+	return &GetAttendeesByIDOK{}
+}
+
+// WithPayload adds the payload to the get attendees by Id o k response
+func (o *GetAttendeesByIDOK) WithPayload(payload *models.Attendee) *GetAttendeesByIDOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get attendees by Id o k response
+func (o *GetAttendeesByIDOK) SetPayload(payload *models.Attendee) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAttendeesByIDOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*GetAttendeesByIDDefault generic error response
+
+swagger:response getAttendeesByIdDefault
+*/
+type GetAttendeesByIDDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetAttendeesByIDDefault creates GetAttendeesByIDDefault with default headers values
+func NewGetAttendeesByIDDefault(code int) *GetAttendeesByIDDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetAttendeesByIDDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get attendees by Id default response
+func (o *GetAttendeesByIDDefault) WithStatusCode(code int) *GetAttendeesByIDDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get attendees by Id default response
+func (o *GetAttendeesByIDDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get attendees by Id default response
+func (o *GetAttendeesByIDDefault) WithPayload(payload *models.Error) *GetAttendeesByIDDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get attendees by Id default response
+func (o *GetAttendeesByIDDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAttendeesByIDDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
