# restapi/operations/attendees/get_attendees_by_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package attendees
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/sctskw/attend.io/models"
+)
+
+// GetAttendeesByOKCode is the HTTP code returned for type GetAttendeesByOK
+const GetAttendeesByOKCode int = 200
+
+/*GetAttendeesByOK find an attendee by id
+
+swagger:response getAttendeesByOK
+*/
+type GetAttendeesByOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Attendee `json:"body,omitempty"`
+}
+
+// NewGetAttendeesByOK creates GetAttendeesByOK with default headers values
+func NewGetAttendeesByOK() *GetAttendeesByOK {
+
+	return &GetAttendeesByOK{}
+}
+
+// WithPayload adds the payload to the get attendees by o k response
+func (o *GetAttendeesByOK) WithPayload(payload *models.Attendee) *GetAttendeesByOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get attendees by o k response
+func (o *GetAttendeesByOK) SetPayload(payload *models.Attendee) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAttendeesByOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*GetAttendeesByDefault generic error response
+
+swagger:response getAttendeesByDefault
+*/
+type GetAttendeesByDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetAttendeesByDefault creates GetAttendeesByDefault with default headers values
+func NewGetAttendeesByDefault(code int) *GetAttendeesByDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetAttendeesByDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get attendees by default response
+func (o *GetAttendeesByDefault) WithStatusCode(code int) *GetAttendeesByDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get attendees by default response
+func (o *GetAttendeesByDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get attendees by default response
+func (o *GetAttendeesByDefault) WithPayload(payload *models.Error) *GetAttendeesByDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get attendees by default response
+func (o *GetAttendeesByDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAttendeesByDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
