# services/attendees.go
@@ -1,20 +1,21 @@
 package services
 
 import (
+	"github.com/go-openapi/strfmt"
 	"github.com/sctskw/attend.io/models"
 )
 
-func GetAttendeesForEvent(eventId string) *models.AttendeesList {
+func GetAttendeesByEventId(eventId strfmt.UUID) models.AttendeesList {
 	return models.NewAttendeeList(
 		models.NewAttendee("John", "Smith", "john.smith@test.com"),
 		models.NewAttendee("Jane", "Doe", "jane.doe@test.com"),
 	)
 }
 
-func GetAttendeeById(id string) *models.Attendee {
+func GetAttendeeById(id strfmt.UUID) *models.Attendee {
 	return models.NewAttendee("Bob", "Stevens", "bob@test.com")
 }
 
-func GetAttendeeByEmail(email string) *models.Attendee {
-	return models.NewAttendee("Sam", "Wise", "same.wise@test.com")
+func GetAttendeeByEmail(email strfmt.Email) *models.Attendee {
+	return models.NewAttendee("Sam", "Wise", "sam.wise@test.com")
 }
