# swagger.yml
@@ -41,6 +41,70 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
+  /events:
+    get:
+      tags:
+        - events
+      responses:
+        200:
+          description: list the events
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Event"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/Error"
+
+  /attendee:
+    get:
+      tags:
+        - attendees
+      operationId: getAttendeeByField
+      parameters:
+        - name: email
+          in: query
+          description: Attendee Email
+          type: string
+          format: email
+        - name: id
+          in: query
+          description: Attendee ID
+          type: string
+          format: uuid
+      responses:
+        200:
+          description: find an attendee by id
+          schema:
+            $ref: "#/definitions/Attendee"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/Error"
+
+  /attendees/{eventId}:
+    get:
+      tags:
+        - attendees
+      operationId: getAttendeesByEventId
+      parameters:
+        - name: eventId
+          in: path
+          description: Event ID
+          type: string
+          format: uuid
+          required: true
+      responses:
+        200:
+          description: list the attendees per event
+          schema:
+            $ref: "#/definitions/AttendeesList"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/Error"
+
 definitions:
   Talk:
     type: object
